examples/type_system/failing/28_adt_nested_guard_non_exhaustive.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/28_adt_nested_guard_non_exhaustive.flx
// error[E015]: Non-Exhaustive Match
//
// Match is not exhaustive: 1 missing pattern.
//
//   examples/type_system/failing/28_adt_nested_guard_non_exhaustive.flx:39:5
//    |
// 39 |     match w {
//    |     ^^^^^^^^^
// 40 |         Boxed(SomeI(v)) if v > 0 -> v,
//    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
// 41 |         Empty -> 0,
//    | ^^^^^^^^^^^^^^^^^^^
// 42 |     }
//    | ^^^^^
//
// Hint:
//   Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E015

// E083: nested constructor arm with guard does not guarantee coverage.

data OptionInt {
    SomeI(Int),
    NoneI,
}

data Wrap {
    Boxed(OptionInt),
    Empty,
}

fn score(w: Wrap) -> Int {
    match w {
        Boxed(SomeI(v)) if v > 0 -> v,
        Empty -> 0,
    }
}

fn main() {
    score(Empty)
}
